--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=7.3",
         "ext-json": "*",
-        "illuminate/support": "^8.6"
+        "illuminate/support": "^8.6",
+        "rap2hpoutre/laravel-log-viewer": "^1.7"
     },
     "require-dev": {
         "orchestra/testbench": "^6.2"
@@ -22,8 +23,7 @@
             "Pharaoh\\Logger\\": "src/"
         }
     },
-    "aut
-    oload-dev": {
+    "autoload-dev": {
         "psr-4": {
             "Pharaoh\\Logger\\Tests\\": "tests/"
         }
