--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Pharaoh\\Logger\\LoggerProvider"
+                "Pharaoh\\Logger\\LoggerServiceProvider"
             ],
             "aliases": {
                 "Logger": "Pharaoh\\Logger\\Facades\\Logger"
